objects/CMN_CommunicationTemplateObjectDef__c.object
<CustomObject>
    <description>Represents an Object or Section of data that can be provided to a template.</description>
    <fields>
        <fullName>CMN_ApiName__c</fullName>
        <description>The Api Name of the custom object</description>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Code__c</fullName>
        <description>The Template Code for the object</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_GroupingName__c</fullName>
        <description>Name to be used to group the child elements for any template.</description>
        <label>Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Communication Template Object Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_GroupingName__c</columns>
        <columns>CMN_Code__c</columns>
        <columns>CMN_ApiName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Template Object Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>